k8s/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: public.ecr.aws/aws-containers/retail-store-sample-cart:0.4.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: retail
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
  - port: 80
    targetPort: 8080
