k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: public.ecr.aws/aws-containers/retail-store-sample-catalog:0.4.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: retail
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
  - port: 80
    targetPort: 8080
