k8s/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
      - name: checkout
        image: public.ecr.aws/aws-containers/retail-store-sample-checkout:0.4.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: retail
spec:
  type: ClusterIP
  selector:
    app: checkout
  ports:
  - port: 80
    targetPort: 8080
