k8s/mySQL.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: retail
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
