k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: public.ecr.aws/aws-containers/retail-store-sample-orders:0.4.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: retail
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
  - port: 80
    targetPort: 8080
