k8s/ui-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: retail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: public.ecr.aws/aws-containers/retail-store-sample-ui:0.4.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
  - port: 80
    targetPort: 8080
